<?xml version="1.0"?>
<package format="3">
  <name>strobe_sync_policy</name>
  <version>1.0.0</version>
  <description>
    A ROS package providing a strobe synchronization policy for message_filters, allowing time-shifted synchronization of multiple message topics.
  </description>

  <maintainer email="maintainer@example.com">Maintainer Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>message_filters</depend>
  <depend>libboost-thread-dev</depend>

  <test_depend>rostest</test_depend>
  <test_depend>rosunit</test_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package> 